fixed css for profile pic in mobile version mobile version

--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -6,6 +6,17 @@
 h1 {
   text-align: center;
 }
+.profilepic {
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  display: flex;
+  width: 50%;
+  max-width: 100%;
+  height: 50%;
+  max-height: 100%;
+}
 
 .card-title{
   color: #252e48;
@@ -25,14 +36,19 @@ h1 {
   display: flex;
   flex-flow: column;
   align-items:center;
+  object-fit: contain;
   max-width: 800px;
-  width: 300px;
-  margin: 0 auto;
+  width:100%;
 }
 
 .cards__wrapper {
   position: relative;
-  margin: 50px 0 45px;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  max-width: 1120px;
+  margin: 0 auto;
+
 }
 
 .cards__items {
