--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -17,7 +17,7 @@
   align-items: center;
   height: 80px;
   max-width: 1500px;
-  min-width: 500px;
+  min-width: 320px;
 }
 
 .navbar-logo {
